# hdpictureconverter-rs

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  generate-worker-manifest.sh
src/: lib.rs
web/: .gitignore  Cargo.toml  index.html  index.js
web/public/: hdpicview-rs.webmanifest  index.html  index.js  serviceworker.js  worker-cache-manifest.js  worker.js
web/src/: lib.rs
